CTA Alignment/layout adjustments

--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,5 @@ wp-config.php
 
 
 # End of https://www.toptal.com/developers/gitignore/api/wordpress,phpstorm,macos,composer,windows,visualstudiocode
+
+.idea/
