--- a/wp-content/themes/wp-starter/package.json
+++ b/wp-content/themes/wp-starter/package.json
@@ -7,28 +7,31 @@
 		"npm": ">=9.0.0"
 	},
 	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"preview": "vite preview",
-		"json-theme": "node theme-json/compile.js",
-		"watch-json-theme": "nodemon --watch theme-json theme-json/compile.js"
+		"dev": "APP_ENV=dev vite",
+		"build": "vite build && npm run json-theme",
+		"json-theme": "node src/theme-json/compile.js",
+		"watch-json-theme": "nodemon --watch src/theme-json --watch tailwind.config.js src/theme-json/compile.js"
 	},
 	"devDependencies": {
 		"@kucrut/vite-for-wp": "^0.8.0",
-		"autoprefixer": "^10.4.8",
+		"autoprefixer": "^10.4.19",
 		"eslint": "^8.23.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.26.0",
 		"install": "^0.13.0",
+		"nodemon": "^3.1.0",
 		"npm": "^10.5.2",
 		"path": "^0.12.7",
-		"postcss": "^8.4.16",
+		"postcss": "^8.4.38",
 		"postcss-nested-import": "^0.2.0",
 		"postcss-nesting": "^10.2.0",
-		"prettier": "^2.7.1",
+		"prettier": "^2.8.8",
 		"prettier-plugin-tailwindcss": "^0.1.13",
 		"tailwindcss": "^3.4.3",
 		"typescript": "^4.8.4",
 		"vite": "^4.4.11"
+	},
+	"dependencies": {
+		"@viget/tailwindcss-plugins": "^3.0.0"
 	}
 }
