--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -3,15 +3,25 @@ type: wordpress
 docroot: ""
 php_version: "8.2"
 webserver_type: nginx-fpm
+router_http_port: "80"
+router_https_port: "443"
 xdebug_enabled: false
 additional_hostnames: []
 additional_fqdns: []
 database:
-    type: mariadb
-    version: "10.4"
+  type: mariadb
+  version: "10.4"
+nfs_mount_enabled: false
+mutagen_enabled: false
 use_dns_when_possible: true
 composer_version: "2"
+nodejs_version: "18"
+# TODO figure this out - turned off for now
+# hooks:
+#   post-start:
+#     - exec: .ddev/commands/web/vite-serve
 web_environment: []
+
 
 # Key features of DDEV's config.yaml:
 
