[#1] Blueprint Build tools for UI (#17)
* [#1] Cleaning up files

* [#1] adding an outline to the readme

* [#1] Trying to update the DDEV vite server

Adding base TW
Adding TW

DDEV testing

Testing out ddev/vite

Setting up base theme.json build files

Setting up base theme-json builder

Setting up DDEV

* [#1] Setting up basic npm install

* [#1] Adding color to theme.json

Adding tailwind as a watched file

Setting up Tailwind with vite build

* [#1] Updating file name

* [#1] Adjusting the btn styles

Setting up blocks style

Testing theme.json build

* [#1] Getting Vite to pull in css

* [#1] Updating buttons and nav

* [#1] Setting up DDEV and Vite

* [#1] Build tools

* [#1] Setting up build of theme.json

* [#1] Updating var names for theme build

Adding AlpineJS

Vite is now building theme.json on build

Changing over to mySQL 8

[#1] Updating how we are loading fonts

* [#1] PR edits/updates

Update functions.php

Cleanup

Update file name

--- a/wp-content/themes/wp-starter/package.json
+++ b/wp-content/themes/wp-starter/package.json
@@ -7,10 +7,9 @@
 		"npm": ">=9.0.0"
 	},
 	"scripts": {
-		"dev": "APP_ENV=dev vite",
-		"build": "vite build && npm run json-theme",
-		"json-theme": "node src/theme-json/_index.js",
-		"watch-json-theme": "nodemon --watch src/theme-json --watch tailwind.config.js src/theme-json/_index.js"
+		"dev": "APP_ENV=dev vite --host",
+		"build": "vite build",
+		"json-theme": "node src/theme-json/generate_theme.js"
 	},
 	"devDependencies": {
 		"@kucrut/vite-for-wp": "^0.8.0",
@@ -23,6 +22,7 @@
 		"npm": "^10.5.2",
 		"path": "^0.12.7",
 		"postcss": "^8.4.38",
+		"postcss-import": "^16.1.0",
 		"postcss-nested-import": "^0.2.0",
 		"postcss-nesting": "^10.2.0",
 		"prettier": "^2.8.8",
@@ -32,6 +32,7 @@
 		"vite": "^4.4.11"
 	},
 	"dependencies": {
-		"@viget/tailwindcss-plugins": "^3.0.0"
+		"@viget/tailwindcss-plugins": "^3.0.0",
+		"alpinejs": "^3.13.9"
 	}
 }
