--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,6 @@ vendor
 
 # Icon must end with two \r
 Icon
-
-# NPM and Vite
 node_modules
 dist
 
@@ -240,6 +238,14 @@ wp-config.php
 
 # htaccess
 /.htaccess
+
+#.ddev
+.allow-upgrade
+.env-frag
+docker-compose.viteserve.yaml
+addon-metadata
+viteserve
+web-build
 
 
 # End of https://www.toptal.com/developers/gitignore/api/wordpress,phpstorm,macos,composer,windows,visualstudiocode
