--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -13,7 +13,7 @@ database:
     version: "8.0"
 use_dns_when_possible: true
 composer_version: "2"
-nodejs_version: "18"
+nodejs_version: 20
 override_config: true
 web_environment:
     - ENVIRONMENT=dev
