--- a/wp-content/themes/wp-starter/package.json
+++ b/wp-content/themes/wp-starter/package.json
@@ -8,7 +8,9 @@
 	"scripts": {
 		"dev": "APP_ENV=dev vite --host",
 		"build": "vite build",
-		"json-theme": "node src/theme-json/generate_theme.js"
+		"json-theme": "node src/theme-json/generate_theme.js",
+		"format": "prettier \"./src/**/*.{css,ts,tsx,js}\" --check",
+		"format:fix": "prettier \"./src/**/*.{css,ts,tsx,js}\" --write"
 	},
 	"devDependencies": {
 		"@kucrut/vite-for-wp": "^0.8.0",
