--- a/wp-content/plugins/acf-blocks-toolkit/package.json
+++ b/wp-content/plugins/acf-blocks-toolkit/package.json
@@ -12,7 +12,9 @@
     "lint:js:src:fix": "wp-scripts lint-js ./src --fix",
     "start": "wp-scripts start",
     "packages-update": "wp-scripts packages-update",
-    "update-pot": "wp i18n make-pot . languages/acf-blocks-toolkit.pot --exclude=src"
+    "update-pot": "wp i18n make-pot . languages/acf-blocks-toolkit.pot --exclude=src",
+    "format": "prettier \"./src/**/*.{css,ts,tsx,js}\" --check",
+    "format:fix": "prettier \"./src/**/*.{css,ts,tsx,js}\" --write"
   },
   "dependencies": {
     "classnames": "^2.3.2"
@@ -20,6 +22,7 @@
   "devDependencies": {
     "@wordpress/icons": "^9.35.0",
     "@wordpress/scripts": "^26.15.0",
+    "prettier": "^3.2.5",
     "webpack-remove-empty-scripts": "^0.8.4"
   }
 }
