--- a/composer.json.dist
+++ b/composer.json.dist
@@ -10,7 +10,7 @@
     "tailwind",
     "vite"
   ],
-  "type": "wordpress-core",
+  "type": "project",
   "homepage": "https://github.com/vigetlabs/wordpress-site-starter",
   "license": "MIT",
   "authors": [
@@ -22,8 +22,7 @@
   "config": {
     "sort-packages": true,
     "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true,
-      "johnpbloch/wordpress-core-installer": true
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   },
   "autoload": {
@@ -49,8 +48,7 @@
   "require": {
     "php": ">=8.2.0",
     "ext-json": "*",
-    "squizlabs/php_codesniffer": "^3.9",
-    "johnpbloch/wordpress": "^6.5"
+    "squizlabs/php_codesniffer": "^3.9"
   },
   "require-dev": {
     "composer/composer": "^2.7",
@@ -58,11 +56,7 @@
     "symfony/console": "^7.0",
     "wp-coding-standards/wpcs": "^3.1"
   },
-  "provide": {
-    "wordpress/core-implementation": "6.5.*"
-  },
   "extra": {
-    "wordpress-install-dir": "./",
     "installer-paths": {
       "wp-content/mu-plugins/{$name}": [
         "type:wordpress-muplugin"
