--- a/composer.json
+++ b/composer.json
@@ -32,47 +32,33 @@
     }
   },
   "scripts": {
-    "post-install-cmd": [
-      "Viget\\ComposerScripts\\ProjectEventHandler::postInstall"
-    ],
     "post-create-project-cmd": [
       "Viget\\ComposerScripts\\ProjectEventHandler::postCreateProject"
-    ],
-    "generate-docs": "Viget\\ComposerScripts\\WPDocsGeneratorScript::make"
+    ]
   },
   "repositories": [
     {
       "type": "composer",
       "url": "https://wpackagist.org"
+    },
+    {
+      "type":"composer",
+      "url":"https://connect.advancedcustomfields.com"
     }
   ],
   "require": {
     "php": ">=8.2.0",
     "ext-json": "*",
-    "squizlabs/php_codesniffer": "^3.9",
     "johnpbloch/wordpress": "^6.5"
   },
   "require-dev": {
     "composer/composer": "^2.7",
-    "phpcompatibility/phpcompatibility-wp": "^2",
-    "symfony/console": "^7.0",
-    "wp-coding-standards/wpcs": "^3.1"
+    "symfony/console": "^7.0"
   },
   "provide": {
     "wordpress/core-implementation": "6.5.*"
   },
   "extra": {
-    "wordpress-install-dir": "./",
-    "installer-paths": {
-      "wp-content/mu-plugins/{$name}": [
-        "type:wordpress-muplugin"
-      ],
-      "wp-content/plugins/{$name}": [
-        "type:wordpress-plugin"
-      ],
-      "wp-content/themes/{$name}": [
-        "type:wordpress-theme"
-      ]
-    }
+    "wordpress-install-dir": "./"
   }
 }
