[#32] Some file string replacement and cleanup

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
   },
   "scripts": {
     "post-create-project-cmd": [
-      "Viget\\ComposerScripts\\ProjectEventHandler::postCreateProject"
+      "Viget\\ComposerScripts\\ProjectEventHandler::postCreateProject",
+      "@composer install"
     ]
   },
   "repositories": [
