--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "tailwind",
     "vite"
   ],
-  "type": "wordpress-core",
+  "type": "project",
   "homepage": "https://github.com/vigetlabs/wordpress-site-starter",
   "license": "MIT",
   "authors": [
@@ -22,8 +22,7 @@
   "config": {
     "sort-packages": true,
     "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true,
-      "johnpbloch/wordpress-core-installer": true
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   },
   "autoload": {
@@ -33,14 +32,13 @@
   },
   "scripts": {
     "post-create-project-cmd": [
-      "@composer install",
       "Viget\\ComposerScripts\\ProjectEventHandler::postCreateProject",
       "@composer install"
     ],
     "post-install-cmd": [
-      "Viget\\ComposerScripts\\ProjectEventHandler::postCreateProject",
-      "@composer install"
-    ]
+      "Viget\\ComposerScripts\\ProjectEventHandler::postInstall"
+    ],
+    "generate-docs": "Viget\\ComposerScripts\\WPDocsGeneratorScript::make"
   },
   "repositories": [
     {
@@ -55,16 +53,27 @@
   "require": {
     "php": ">=8.2.0",
     "ext-json": "*",
-    "johnpbloch/wordpress": "^6.5"
+    "squizlabs/php_codesniffer": "^3.9",
+    "wpackagist-plugin/svg-support": "^2.5",
+    "wpengine/advanced-custom-fields-pro": "^6.2"
   },
   "require-dev": {
     "composer/composer": "^2.7",
-    "symfony/console": "^7.0"
-  },
-  "provide": {
-    "wordpress/core-implementation": "6.5.*"
+    "phpcompatibility/phpcompatibility-wp": "^2",
+    "symfony/console": "^7.0",
+    "wp-coding-standards/wpcs": "^3.1"
   },
   "extra": {
-    "wordpress-install-dir": "./"
+    "installer-paths": {
+      "wp-content/mu-plugins/{$name}": [
+        "type:wordpress-muplugin"
+      ],
+      "wp-content/plugins/{$name}": [
+        "type:wordpress-plugin"
+      ],
+      "wp-content/themes/{$name}": [
+        "type:wordpress-theme"
+      ]
+    }
   }
 }
