--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
   "config": {
     "sort-packages": true,
     "allow-plugins": {
+      "composer/installers": true,
       "dealerdirect/phpcodesniffer-composer-installer": true
     }
   },
