--- a/wp-content/themes/wp-starter/package.json
+++ b/wp-content/themes/wp-starter/package.json
@@ -33,6 +33,7 @@
 		"vite": "^4.4.11"
 	},
 	"dependencies": {
+		"@alpinejs/persist": "^3.13.10",
 		"@viget/tailwindcss-plugins": "^3.0.0",
 		"alpinejs": "^3.13.9",
 		"vite-plugin-live-reload": "^3.0.3"
