[#50] Post Create/Install Updates
- Run Theme composer install
- Add bin/start to string replacement list
- Used exit() in post-create-project event
- Swapped README files
- Moved ddev launch to bin/start
- Used bin/start in composer post-install script
- Delete packages.json
- Some code formatting/casing adjustments

--- a/composer.json
+++ b/composer.json
@@ -32,18 +32,19 @@
     }
   },
   "scripts": {
-    "post-create-project-cmd": [
-      "Viget\\ComposerScripts\\ProjectEventHandler::postCreateProject",
-      "@composer install"
-    ],
-    "pre-install-cmd": [
-      "Viget\\ComposerScripts\\ProjectEventHandler::preInstall"
-    ],
-    "post-install-cmd": [
-      "ddev start",
-      "Viget\\ComposerScripts\\ProjectEventHandler::postInstall",
-      "ddev launch"
-    ],
+      "post-create-project-cmd": [
+        "Viget\\ComposerScripts\\ProjectEventHandler::postCreateProject",
+        "@composer install"
+      ],
+      "pre-install-cmd": [
+        "Viget\\ComposerScripts\\ProjectEventHandler::preInstall"
+      ],
+      "post-install-cmd": [
+        "ddev start",
+        "Viget\\ComposerScripts\\ProjectEventHandler::postInstall",
+        "ddev stop",
+        "exit(1) && bin/start"
+      ],
     "generate-docs": "Viget\\ComposerScripts\\WPDocsGeneratorScript::make"
   },
   "repositories": [
