--- a/composer.json
+++ b/composer.json
@@ -35,51 +35,10 @@
       "post-create-project-cmd": [
         "Viget\\ComposerScripts\\ProjectEventHandler::postCreateProject",
         "@composer install"
-      ],
-      "pre-install-cmd": [
-        "Viget\\ComposerScripts\\ProjectEventHandler::preInstall"
-      ],
-      "post-install-cmd": [
-        "ddev start",
-        "Viget\\ComposerScripts\\ProjectEventHandler::postInstall",
-        "ddev stop",
-        "exit(1) && bin/start"
-      ],
-    "generate-docs": "Viget\\ComposerScripts\\WPDocsGeneratorScript::make"
-  },
-  "repositories": [
-    {
-      "type": "composer",
-      "url": "https://wpackagist.org"
-    },
-    {
-      "type":"composer",
-      "url":"https://connect.advancedcustomfields.com"
-    }
-  ],
-  "require": {
-    "php": ">=8.2.0",
-    "ext-json": "*",
-    "squizlabs/php_codesniffer": "^3.9",
-    "wpackagist-plugin/svg-support": "^2.5"
+      ]
   },
   "require-dev": {
     "composer/composer": "^2.7",
-    "phpcompatibility/phpcompatibility-wp": "^2",
-    "symfony/console": "^7.0",
-    "wp-coding-standards/wpcs": "^3.1"
-  },
-  "extra": {
-    "installer-paths": {
-      "wp-content/mu-plugins/{$name}": [
-        "type:wordpress-muplugin"
-      ],
-      "wp-content/plugins/{$name}": [
-        "type:wordpress-plugin"
-      ],
-      "wp-content/themes/{$name}": [
-        "type:wordpress-theme"
-      ]
-    }
+    "symfony/console": "^7.0"
   }
 }
