--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -9,22 +9,30 @@ xdebug_enabled: false
 additional_hostnames: []
 additional_fqdns: []
 database:
-    type: mysql
-    version: "8.0"
+  type: mysql
+  version: "8.0"
 use_dns_when_possible: true
 composer_version: "2"
 nodejs_version: "20"
 corepack_enable: false
 override_config: true
+hooks:
+  post-start:
+    - composer: install --working-dir=/var/www/html/wp-content/themes/wp-starter
+    - wp: wp core download --version=latest
 web_environment:
-    - ENVIRONMENT=dev
-    #- ENVIRONMENT=prod # This loads the production environment scripts
-    - WP_ENVIRONMENT_TYPE=development
+  - ENVIRONMENT=dev
+  #- ENVIRONMENT=prod # This loads the production environment scripts
+  - WP_ENVIRONMENT_TYPE=development
 web_extra_exposed_ports:
-    - name: vite-serve
-      container_port: 5173
-      http_port: 5172
-      https_port: 5173
+  - name: vite
+    container_port: 5173
+    http_port: 5172
+    https_port: 5173
+web_extra_daemons:
+  - name: 'vite'
+    command: "npm install && npm run build"
+    directory: /var/www/html/wp-content/themes/wp-starter
 
 
 # Key features of DDEV's config.yaml:
