[#50] Restore composer post-install script

--- a/wp-content/themes/wp-starter/composer.json
+++ b/wp-content/themes/wp-starter/composer.json
@@ -51,6 +51,9 @@
     }
   ],
   "scripts": {
+    "post-install-cmd": [
+      "Viget\\ComposerScripts\\ProjectEventHandler::postInstall"
+    ],
     "generate-docs": "Viget\\ComposerScripts\\WPDocsGeneratorScript::make"
   },
   "extra": {
