--- a/wp-content/themes/wp-starter/composer.json
+++ b/wp-content/themes/wp-starter/composer.json
@@ -52,7 +52,8 @@
   ],
   "scripts": {
     "post-install-cmd": [
-      "Viget\\ComposerScripts\\ProjectEventHandler::postInstall"
+      "Viget\\ComposerScripts\\ProjectEventHandler::postInstall",
+      "ddev launch"
     ],
     "generate-docs": "Viget\\ComposerScripts\\WPDocsGeneratorScript::make"
   },
