--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
   },
   "scripts": {
       "post-create-project-cmd": [
-        "Viget\\ComposerScripts\\ProjectEventHandler::postCreateProject"
+        "Viget\\ComposerScripts\\ProjectEventHandler::postCreateProject",
+        "ddev start"
       ]
   },
   "require-dev": {
