[#50] Version numbers and moved changelog

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "viget/wordpress-site-starter",
+  "version": "0.1.1",
   "description": "A custom WordPress Site Starter Kit by Viget.",
   "keywords": [
     "wordpress",
