--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -19,6 +19,7 @@ override_config: true
 hooks:
   post-start:
     - exec: composer install --working-dir=/var/www/html/wp-content/themes/wp-starter
+    - exec-host: ddev launch
 web_environment:
   - ENVIRONMENT=dev
   #- ENVIRONMENT=prod # This loads the production environment scripts
