--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "viget/wordpress-site-starter",
+  "version": "0.1.1",
   "description": "A custom WordPress Site Starter Kit by Viget.",
   "keywords": [
     "wordpress",
@@ -32,53 +33,13 @@
     }
   },
   "scripts": {
-    "post-create-project-cmd": [
-      "Viget\\ComposerScripts\\ProjectEventHandler::postCreateProject",
-      "@composer install"
-    ],
-    "pre-install-cmd": [
-      "Viget\\ComposerScripts\\ProjectEventHandler::preInstall"
-    ],
-    "post-install-cmd": [
-      "ddev start",
-      "Viget\\ComposerScripts\\ProjectEventHandler::postInstall",
-      "ddev launch"
-    ],
-    "generate-docs": "Viget\\ComposerScripts\\WPDocsGeneratorScript::make"
-  },
-  "repositories": [
-    {
-      "type": "composer",
-      "url": "https://wpackagist.org"
-    },
-    {
-      "type":"composer",
-      "url":"https://connect.advancedcustomfields.com"
-    }
-  ],
-  "require": {
-    "php": ">=8.2.0",
-    "ext-json": "*",
-    "squizlabs/php_codesniffer": "^3.9",
-    "wpackagist-plugin/svg-support": "^2.5"
+      "post-create-project-cmd": [
+        "Viget\\ComposerScripts\\ProjectEventHandler::postCreateProject",
+        "ddev start"
+      ]
   },
   "require-dev": {
     "composer/composer": "^2.7",
-    "phpcompatibility/phpcompatibility-wp": "^2",
-    "symfony/console": "^7.0",
-    "wp-coding-standards/wpcs": "^3.1"
-  },
-  "extra": {
-    "installer-paths": {
-      "wp-content/mu-plugins/{$name}": [
-        "type:wordpress-muplugin"
-      ],
-      "wp-content/plugins/{$name}": [
-        "type:wordpress-plugin"
-      ],
-      "wp-content/themes/{$name}": [
-        "type:wordpress-theme"
-      ]
-    }
+    "symfony/console": "^7.0"
   }
 }
