--- a/wp-content/themes/wp-starter/composer.json
+++ b/wp-content/themes/wp-starter/composer.json
@@ -1,11 +1,73 @@
 {
+  "name": "viget/wordpress-site-starter",
+  "version": "0.1.0",
+  "description": "A custom WordPress Site Starter Kit by Viget.",
+  "keywords": [
+    "wordpress",
+    "components",
+    "cms",
+    "ddev",
+    "tailwind",
+    "vite"
+  ],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Viget",
+      "homepage": "https://viget.com/"
+    }
+  ],
+  "autoload": {
+    "psr-4": {
+      "Viget\\ComposerScripts\\": "../../../bin/composer-scripts/"
+    }
+  },
   "require": {
+      "php": ">=8.2.0",
+      "ext-json": "*",
       "idleberg/wordpress-vite-assets": "^1.0",
-      "timber/timber": "^2.1"
+      "squizlabs/php_codesniffer": "^3.9",
+      "timber/timber": "^2.1",
+      "wpackagist-plugin/svg-support": "^2.5"
+  },
+  "require-dev": {
+      "phpcompatibility/phpcompatibility-wp": "^2",
+      "wp-coding-standards/wpcs": "^3.1"
   },
   "config": {
+      "sort-packages": true,
       "allow-plugins": {
-          "composer/installers": true
+          "composer/installers": true,
+          "dealerdirect/phpcodesniffer-composer-installer": true
       }
+  },
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://wpackagist.org"
+    },
+    {
+      "type":"composer",
+      "url":"https://connect.advancedcustomfields.com"
+    }
+  ],
+  "scripts": {
+    "post-install-cmd": [
+      "Viget\\ComposerScripts\\ProjectEventHandler::postInstall"
+    ],
+    "generate-docs": "Viget\\ComposerScripts\\WPDocsGeneratorScript::make"
+  },
+  "extra": {
+    "installer-paths": {
+      "../../mu-plugins/{$name}": [
+        "type:wordpress-muplugin"
+      ],
+      "../../plugins/{$name}": [
+        "type:wordpress-plugin"
+      ],
+      "../../themes/{$name}": [
+        "type:wordpress-theme"
+      ]
+    }
   }
 }
