--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -18,8 +18,8 @@ corepack_enable: false
 override_config: true
 hooks:
   post-start:
-    - exec: composer install --working-dir=/var/www/html/wp-content/themes/wp-starter
-    - exec-host: ddev launch
+    - composer: install -d=/var/www/html/wp-content/themes/wp-starter
+    - exec-host: ddev launch && exit
 web_environment:
   - ENVIRONMENT=dev
   #- ENVIRONMENT=prod # This loads the production environment scripts
