--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -18,8 +18,8 @@ corepack_enable: false
 override_config: true
 hooks:
   post-start:
-    - exec: composer install --working-dir=/var/www/html/wp-content/themes/wp-starter
-    - exec-host: ddev launch
+    - composer: install -d /var/www/html/wp-content/themes/wp-starter
+    - exec-host: ddev launch && exit
 web_environment:
   - ENVIRONMENT=dev
   #- ENVIRONMENT=prod # This loads the production environment scripts
@@ -31,7 +31,7 @@ web_extra_exposed_ports:
     https_port: 5173
 web_extra_daemons:
   - name: 'vite'
-    command: "npm install && npm run build"
+    command: "npm install && npm run dev"
     directory: /var/www/html/wp-content/themes/wp-starter
 
 
