--- a/.gitignore
+++ b/.gitignore
@@ -233,6 +233,9 @@ wp-config.php
 !/wp-content/plugins/acf-blocks-toolkit
 !/wp-content/plugins/advanced-custom-fields-pro
 
+# Remove the theme.json file as it is built in the theme with Vite
+/wp-content/themes/wp-starter/theme.json
+
 # Log files
 *.log
 
