--- a/wp-content/themes/wp-starter/package.json
+++ b/wp-content/themes/wp-starter/package.json
@@ -30,6 +30,7 @@
 		"vite": "^5.2.11"
 	},
 	"dependencies": {
+		"@alpinejs/focus": "^3.13.10",
 		"@alpinejs/persist": "^3.13.10",
 		"@viget/tailwindcss-plugins": "^3.0.0",
 		"alpinejs": "^3.13.9",
