--- a/wp-content/themes/wp-starter/package.json
+++ b/wp-content/themes/wp-starter/package.json
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.19",
+		"cssnano": "^7.0.1",
 		"eslint": "^8.23.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.26.0",
