[devops/#1514] add concurrency logic to workflows

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,6 +5,10 @@ on:
     tags:
       - 'v*' # Create release for any tag starting with 'v'
 
+concurrency:
+  group: deploy
+  cancel-in-progress: true
+
 jobs:
   release:
     name: Create GitHub Release
