--- a/.gitignore
+++ b/.gitignore
@@ -234,6 +234,7 @@ wp-config.php
 # Explicitly Allowed Themes and Plugins
 !/wp-content/themes/wp-starter
 !/wp-content/plugins/acf-blocks-toolkit
+!/wp-content/plugins/acf-form-blocks
 !/wp-content/plugins/viget-parts-kit
 !/wp-content/plugins/advanced-custom-fields-pro
 
