--- a/wp-content/themes/wp-starter/package.json
+++ b/wp-content/themes/wp-starter/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "wp-starter",
 	"version": "0.1.0",
-  "type": "commonjs",
+	"type": "commonjs",
 	"engines": {
 		"node": ">=20.0.0",
 		"npm": ">=10.0.0"
@@ -24,6 +24,7 @@
 		"path": "^0.12.7",
 		"plop": "^4.0.1",
 		"postcss": "^8.4.38",
+		"postcss-easy-import": "^4.0.0",
 		"postcss-import": "^16.1.0",
 		"postcss-nested-import": "^0.2.0",
 		"postcss-nesting": "^10.2.0",
