--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-	"recommendations": ["valeryanm.vscode-phpsab", "EditorConfig.EditorConfig", "bradlc.vscode-tailwindcss"]
+	"recommendations": ["valeryanm.vscode-phpsab", "EditorConfig.EditorConfig", "bradlc.vscode-tailwindcss", "heissenbergerlab.wp-blocks-to-json"]
 }
