--- a/wp-content/themes/wp-starter/package.json
+++ b/wp-content/themes/wp-starter/package.json
@@ -14,25 +14,26 @@
 		"plop": "plop"
 	},
 	"devDependencies": {
-		"autoprefixer": "^10.4.19",
-		"cssnano": "^7.0.1",
-		"eslint": "^8.23.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-import": "^2.26.0",
+		"autoprefixer": "^10.4.20",
+		"cssnano": "^7.0.6",
+		"eslint": "^8.57.1",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-import": "^2.30.0",
 		"install": "^0.13.0",
-		"npm": "^10.5.2",
+		"npm": "^10.3.3",
 		"path": "^0.12.7",
 		"plop": "^4.0.1",
-		"postcss": "^8.4.38",
+		"postcss": "^8.4.47",
 		"postcss-easy-import": "^4.0.0",
 		"postcss-import": "^16.1.0",
-		"postcss-nested-import": "^0.2.0",
-		"postcss-nesting": "^10.2.0",
-		"prettier": "^2.8.8",
-		"prettier-plugin-tailwindcss": "^0.1.13",
-		"tailwindcss": "^3.4.3",
-		"typescript": "^4.8.4",
-		"vite": "^5.2.11"
+		"postcss-import-ext-glob": "^2.1.1",
+		"postcss-nested-import": "^1.3.0",
+		"postcss-nesting": "^13.0.0",
+		"prettier": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.8",
+		"tailwindcss": "^3.4.13",
+		"typescript": "^5.6.2",
+		"vite": "^5.4.8"
 	},
 	"dependencies": {
 		"@alpinejs/focus": "^3.13.10",
