--- a/.gitignore
+++ b/.gitignore
@@ -235,10 +235,12 @@ wp-config.php
 !/wp-content/themes/wp-starter
 !/wp-content/plugins/acf-blocks-toolkit
 !/wp-content/plugins/viget-parts-kit
-!/wp-content/plugins/advanced-custom-fields-pro
 
 # Remove the theme.json file as it is built in the theme with Vite
 /wp-content/themes/wp-starter/theme.json
+
+# Remove the auth.json file since it contains sensitive information.
+/wp-content/themes/wp-starter/auth.json
 
 # Plugin generated folders
 /wp-content/wflogs
