[N/A] Icon Only style and default logo

--- a/.gitignore
+++ b/.gitignore
@@ -240,6 +240,9 @@ wp-config.php
 # Remove the theme.json file as it is built in the theme with Vite
 /wp-content/themes/wp-starter/theme.json
 
+# Remove the auth.json file as it contains sensitive information
+/wp-content/themes/wp-starter/auth.json
+
 # Plugin generated folders
 /wp-content/wflogs
 
