--- a/wp-content/plugins/acf-blocks-toolkit/package.json
+++ b/wp-content/plugins/acf-blocks-toolkit/package.json
@@ -17,6 +17,7 @@
     "format:fix": "prettier \"./src/**/*.{css,ts,tsx,js}\" --write"
   },
   "dependencies": {
+    "@wordpress/dom-ready": "^4.10.0",
     "classnames": "^2.5.1"
   },
   "devDependencies": {
