--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,7 @@ fabric.properties
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
+!.vscode/*.code-workspace
 
 # Local History for Visual Studio Code
 .history/
