[#123] Updating theme readme and adding some vscode json defaults

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-	"twiggy.framework": "ignore"
+	"twiggy.framework": "ignore",
+	"php.version": "8.2",
+	"intelephense.environment.phpVersion": "8.2"
 }
