--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -25,17 +25,17 @@ web_environment:
   - ENVIRONMENT=dev
   #- ENVIRONMENT=prod # This loads the production environment scripts
   - WP_ENVIRONMENT_TYPE=development
+  - VITE_PRIMARY_PORT=5173
+  - VITE_SECONDARY_PORT=5173
 web_extra_exposed_ports:
   - name: vite
     container_port: 5173
     http_port: 5172
     https_port: 5173
 web_extra_daemons:
-  - name: 'vite'
+  - name: "vite"
     command: "npm install && npm run dev"
     directory: /var/www/html/wp-content/themes/wp-starter
-
-
 # Key features of DDEV's config.yaml:
 
 # name: <projectname> # Name of the project, automatically provides
