--- a/wp-content/themes/wp-starter/package.json
+++ b/wp-content/themes/wp-starter/package.json
@@ -14,7 +14,7 @@
     "plop": "plop"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
+    "@tailwindcss/postcss": "^4.1.11",
     "cssnano": "^7.0.6",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
@@ -25,13 +25,12 @@
     "plop": "^4.0.1",
     "postcss": "^8.4.49",
     "postcss-easy-import": "^4.0.0",
-    "postcss-import": "^16.1.0",
     "postcss-import-ext-glob": "^2.1.1",
     "postcss-nested-import": "^1.3.0",
     "postcss-nesting": "^13.0.1",
     "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.17",
+    "prettier-plugin-tailwindcss": "^0.6.13",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.7.2",
     "vite": "^5.4.11"
   },
