--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -30,10 +30,10 @@ web_extra_exposed_ports:
     container_port: 5173
     http_port: 5172
     https_port: 5173
-web_extra_daemons:
-  - name: "vite"
-    command: "npm install && npm run dev"
-    directory: /var/www/html/wp-content/themes/wp-starter
+# web_extra_daemons:
+#   - name: "vite"
+#     command: "npm install && npm run dev"
+#     directory: /var/www/html/wp-content/themes/wp-starter
 # Key features of DDEV's config.yaml:
 
 # name: <projectname> # Name of the project, automatically provides
