--- a/wp-content/themes/wp-starter/package.json
+++ b/wp-content/themes/wp-starter/package.json
@@ -8,8 +8,7 @@
   },
   "scripts": {
     "dev": "APP_ENV=dev vite --host",
-    "build": "vite build && npm run build:theme-json",
-    "build:theme-json": "cd wp-theme-json-generator && npm run build && node example.js",
+    "build": "vite build",
     "format": "prettier \"./src/**/*.{css,ts,tsx,js}\" --check",
     "format:fix": "prettier \"./src/**/*.{css,ts,tsx,js}\" --write",
     "plop": "plop"
