[N/A] Plop file and README Updates

--- a/.gitignore
+++ b/.gitignore
@@ -235,6 +235,7 @@ wp-config.php
 # Explicitly Allowed Themes and Plugins
 !/wp-content/themes/wp-starter
 !/wp-content/plugins/advanced-custom-fields-pro
+!/wp-content/plugins/advanced-custom-fields-pro/vendor
 
 # Remove the theme.json file as it is built in the theme with Vite
 /wp-content/themes/wp-starter/theme.json
