[N/A] Various automation and theme-json fixes

--- a/wp-content/themes/wp-starter/composer.json
+++ b/wp-content/themes/wp-starter/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "viget/wordpress-site-starter",
   "description": "A custom WordPress Site Starter Kit by Viget.",
+  "version": "0.1.0",
   "keywords": [
     "wordpress",
     "components",
