--- a/wp-content/themes/wp-starter/composer.json
+++ b/wp-content/themes/wp-starter/composer.json
@@ -43,6 +43,10 @@
   },
   "config": {
     "sort-packages": true,
+    "optimize-autoloader": true,
+    "platform": {
+      "php": "8.4"
+    },
     "allow-plugins": {
       "composer/installers": true,
       "dealerdirect/phpcodesniffer-composer-installer": true
