--- a/wp-content/themes/wp-starter/composer.json
+++ b/wp-content/themes/wp-starter/composer.json
@@ -28,9 +28,8 @@
     "idleberg/wordpress-vite-assets": "^1.2",
     "timber/timber": "^2.3",
     "viget/viget-blocks-toolkit": "^1.1",
-    "viget/viget-form-blocks": "^0.0.1",
     "viget/viget-parts-kit": "^1.0",
-    "wpackagist-plugin/accessibility-checker": "^1.34",
+    "wpackagist-plugin/accessibility-checker": "^1.35",
     "wpackagist-plugin/safe-svg": "^2.4",
     "wpackagist-plugin/seo-by-rank-math": "^1.0",
     "wpackagist-plugin/wordfence": "^8.1"
@@ -48,16 +47,16 @@
       "dealerdirect/phpcodesniffer-composer-installer": true
     }
   },
-  "repositories": [
-    {
+  "repositories": {
+    "wpackagist": {
       "type": "composer",
       "url": "https://wpackagist.org"
     },
-    {
+    "acf": {
       "type": "composer",
       "url": "https://connect.advancedcustomfields.com"
     }
-  ],
+  },
   "scripts": {
     "pre-install-cmd": [
       "Viget\\ComposerScripts\\ProjectEventHandler::preInstall"
