--- a/wp-content/themes/wp-starter/package.json
+++ b/wp-content/themes/wp-starter/package.json
@@ -22,7 +22,8 @@
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "tailwindcss": "^4.1.11",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "vite-plugin-restart": "^2.0.0"
   },
   "dependencies": {
     "@alpinejs/focus": "^3.14.8",
