--- a/wp-content/themes/wp-starter/package.json
+++ b/wp-content/themes/wp-starter/package.json
@@ -22,12 +22,13 @@
     "prettier": "^3.8.1",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "tailwindcss": "^4.1.18",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "vite-plugin-live-reload": "^3.0.5",
+    "vite-plugin-restart": "^2.0.0"
   },
   "dependencies": {
     "@alpinejs/focus": "^3.15.8",
     "@alpinejs/persist": "^3.15.8",
-    "alpinejs": "^3.15.8",
-    "vite-plugin-live-reload": "^3.0.5"
+    "alpinejs": "^3.15.8"
   }
 }
