--- a/wp-content/themes/wp-starter/package.json
+++ b/wp-content/themes/wp-starter/package.json
@@ -23,8 +23,7 @@
     "prettier-plugin-tailwindcss": "^0.6.13",
     "tailwindcss": "^4.1.18",
     "vite": "^7.3.1",
-    "vite-plugin-live-reload": "^3.0.5",
-    "vite-plugin-restart": "^2.0.0"
+    "vite-plugin-live-reload": "^3.0.5"
   },
   "dependencies": {
     "@alpinejs/focus": "^3.15.8",
